clang/test/BSC/Negative/SafeZone/unsafe_param_or_return_type/unsafe_param_or_return_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe int* funa(int *a);

_Safe int* funa(int *a) {
  return a;
}

_Safe int* (*p)(int *a);

_Safe int funb(int arr[10]) {
  return 10;
}

union data {
  int a;
  char b;
};

_Safe union data func(union data a) { 
  return a;                         
}

struct SA {
  int a;
};

_Safe struct SA fund(struct SA f) {
  return f;
}

_Safe struct SA fund1(struct SA *owned fp) {
  return *fp;
}// expected-error {{memory leak of value: `fp`}}

_Safe struct SA fund2(struct SA *borrow fp) {
  return *fp;
}

struct SB {
  int *a;
};

_Safe struct SB fune(struct SB f) {
  return f;
}

struct SC {
  union data a;
};

_Safe struct SC funf(struct SC f) {  
  return f;                      
}

struct SD {
  int arr[10];
};

_Safe struct SD fung(struct SD f) {
  return f;
}

struct SE {
  int (*arr)[10];
};

_Safe struct SE funh(struct SE f) {
  return f;
}

struct SF {
  int *arr[10];
};

_Safe struct SF funi(struct SF f) {
  return f;
}

_Safe int* owned funj(int* owned a) {
  return a;
}

struct SG {
  int* owned a;
};

_Safe struct SG funk(struct SG f) {
  return f;
}